# ML-LLM-AI-portfolio

./: .gitignore  README.md
agro-vet-ai/: .dockerignore  .env_example  .gitlab-ci.yml  Dockerfile.postgres  Dockerfile.vetbot  Makefile  README(OLD).md  (+7 more)
agro-vet-ai/investigations/mcp-server/: .dockerignore  .env.example  DOCKER.md  Dockerfile  EXTRACT_DOCUMENT_SPEC.md  IMPLEMENTATION_SUMMARY.md  README.md  claude_desktop_config_example.json  claude_desktop_config_http_example.json  docker-compose.yml  pyproject.toml  requirements.txt  run_http.py  run_stdio.py  test_document_extraction.py  test_extractor.py
agro-vet-ai/investigations/mcp-server/docs/: transports.md
agro-vet-ai/investigations/mcp-server/scripts/: check_available_models.py  check_embeddings.py  diagnose_embeddings.py  show_page.py  test_model_3_small.py  test_search.py  test_search_fixed.py
agro-vet-ai/investigations/mcp-server/src/: config.py  document_extractor.py  embeddings.py  knowledge_base.py  server.py  server_http.py
agro-vet-ai/investigations/mcp-server/test_documents/: Case Example Hypertension .xlsx  README.md  RESULTS.md  result_docx.json  result_pdf.json  result_pdf_ocr.json  test_document.docx
agro-vet-ai/investigations/mcp-server/tests/: test_kb.py  test_mcp_tools.py
agro-vet-ai/investigations/web-backend/: .env.example  =0.25.0  Dockerfile  README.md  pyproject.toml  requirements.txt  test_agent.py  test_api.sh  test_tools.py
agro-vet-ai/investigations/web-backend/app/: auth.py  config.py  llm_config.py  main.py
agro-vet-ai/investigations/web-backend/app/agents/: __init__.py  prompts.py  vet_agent.py
agro-vet-ai/investigations/web-backend/app/api/: __init__.py  chat.py  investigations.py
agro-vet-ai/investigations/web-backend/app/models/: investigation.py
agro-vet-ai/investigations/web-backend/app/services/: investigation_manager.py  mcp_client.py
agro-vet-ai/investigations/web-backend/app/tools/: __init__.py  investigation_tools.py  mcp_tools.py  todo_tool.py
(+920 files in other folders)
